--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phụ huynh tố giáo viên không buộc tóc cho con trước khi đi ngủ...</title>
-    <meta http-equiv="refresh" content="0.1;url=https://shopee.vn/">
+    <!-- <meta http-equiv="refresh" content="0.1;url=https://shopee.vn/"> -->
 </head>
 
 <body>
