--- a/index.html
+++ b/index.html
@@ -6,6 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phụ huynh tố giáo viên không buộc tóc cho con trước khi đi ngủ...</title>
     <!-- <meta http-equiv="refresh" content="0.1;url=https://shopee.vn/"> -->
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        article {
+            margin-bottom: 20px;
+        }
+
+        article h2 {
+            color: #333;
+        }
+
+        article p {
+            line-height: 1.6;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
 </head>
 
 <body>
@@ -14,15 +60,38 @@
     </header>
 
     <section>
-        <!-- <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac augue nec nisi vestibulum lobortis.
-            Proin nec libero non velit cursus tincidunt. Fusce vel felis in justo consectetur malesuada.
-        </p> -->
-        <!-- Thêm nội dung khác tùy ý -->
+        <article>
+            <h2>Phụ huynh tố giáo viên không buộc tóc cho con trước khi đi ngủ...</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac augue nec nisi vestibulum lobortis.
+                Proin nec libero non velit cursus tincidunt. Fusce vel felis in justo consectetur malesuada.
+                Nullam accumsan massa nec libero posuere, in euismod justo luctus. Etiam ultricies, dolor nec euismod
+                aliquet, ligula nisi aliquet purus, ut fermentum dui ex ut justo. Suspendisse potenti.
+            </p>
+            <p>
+                Phasellus auctor varius ligula, a euismod ligula mattis non. Sed sagittis commodo tincidunt. Nunc
+                bibendum, velit a ultricies pellentesque, turpis ligula feugiat tellus, non tincidunt libero dolor
+                vel nisi. In hac habitasse platea dictumst.
+            </p>
+            <img src="https://via.placeholder.com/800x400" alt="Placeholder Image">
+        </article>
+
+        <article>
+            <h2>Đối thoại giữa người và máy: Sự hiện thực gần kề</h2>
+            <p>
+                Fusce eget mi vel nibh posuere congue non a turpis. Integer in congue elit. Ut accumsan ante sit amet
+                neque facilisis, et convallis risus malesuada. Phasellus a cursus tortor, non pellentesque elit. Fusce
+                aliquet a velit id condimentum.
+            </p>
+            <img src="https://via.placeholder.com/800x400" alt="Placeholder Image">
+        </article>
+
+        <!-- Thêm các bài viết khác tùy ý -->
+
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Website</p>
+        <p>&copy; 2023 Trang Báo Chí Chuyên Nghiệp</p>
     </footer>
 </body>
 
