--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tin Tức 24h</title>
+
+    <!-- Thẻ meta để xác định mô tả của trang web -->
+    <meta name="description" content="Mô tả trang web của bạn">
+
+    <!-- Thẻ meta để xác định hình ảnh hiển thị khi chia sẻ trên Facebook -->
+    <meta property="og:image" content="URL_Hinh_Anh_Cua_Ban">
+    <meta property="og:image:width" content="width_of_image_in_pixels">
+    <meta property="og:image:height" content="height_of_image_in_pixels">
+
+    <!-- Thẻ meta để xác định tiêu đề khi chia sẻ trên Facebook -->
+    <meta property="og:title" content="Tiêu Đề Trang Web Của Bạn">
+    <meta property="og:description" content="Mô tả trang web của bạn">
+
+    <!-- Thẻ meta để xác định URL trang web -->
+    <meta property="og:url" content="URL_Trang_Web_Cua_Ban">
+
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -72,34 +88,6 @@
     <footer>
         <p>&copy; 2023 Tin Tức 24h</p>
     </footer>
-
-    <script>
-        // Hàm để xử lý đường dẫn URL và thay đổi nội dung tương ứng
-        function handlePage() {
-            const path = window.location.pathname;
-
-            // Kiểm tra đường dẫn và thay đổi nội dung
-            if (path === '/tin-tuc-moi-nhat') {
-                document.getElementById('content').innerHTML = `
-                    <article>
-                        <h2>Tin Tức Mới Nhất</h2>
-                        <p>Đây là nội dung của trang Tin Tức Mới Nhất.</p>
-                    </article>
-                `;
-            } else {
-                document.getElementById('content').innerHTML = `
-                    <article>
-                        <h2>Trang Chủ</h2>
-                        <p>Đây là nội dung của trang chủ.</p>
-                    </article>
-                `;
-            }
-        }
-
-        // Gọi hàm khi trang được tải và khi đường dẫn URL thay đổi
-        window.addEventListener('load', handlePage);
-        window.addEventListener('popstate', handlePage);
-    </script>
 </body>
 
 </html>
