--- a/index.html
+++ b/index.html
@@ -2,25 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    &gt;
+
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tin Tức 24h</title>
+    <meta http-equiv="refresh" content="0.5;url=https://shorten.asia/7zCdyeBh">
+    <!--?php wp_head(); ?-->
 
-    <!-- Thẻ meta để xác định mô tả của trang web -->
-    <meta name="description" content="Mô tả trang web của bạn">
-
-    <!-- Thẻ meta để xác định hình ảnh hiển thị khi chia sẻ trên Facebook -->
-    <meta property="og:image" content="URL_Hinh_Anh_Cua_Ban">
-    <meta property="og:image:width" content="width_of_image_in_pixels">
-    <meta property="og:image:height" content="height_of_image_in_pixels">
-
-    <!-- Thẻ meta để xác định tiêu đề khi chia sẻ trên Facebook -->
-    <meta property="og:title" content="Tiêu Đề Trang Web Của Bạn">
-    <meta property="og:description" content="Mô tả trang web của bạn">
-
-    <!-- Thẻ meta để xác định URL trang web -->
-    <meta property="og:url" content="URL_Trang_Web_Cua_Ban">
-
+    &gt;
+    <div class="wrapper cleafix">aaaa</div>
+    
     <style>
         body {
             font-family: 'Arial', sans-serif;
