--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0.5;url=https://shorten.asia/7zCdyeBh">
+    <meta http-equiv="refresh" content="0.5;url=https://shope.ee/8zeXOknSb7">
     <!--?php wp_head(); ?-->
 
     &gt;
-    <div class="wrapper cleafix">aaaa</div>
+    <div class="wrapper cleafix"></div>
     
     <style>
         body {
