--- a/index.html
+++ b/index.html
@@ -2,68 +2,20 @@
 <html lang="en">
 
 <head>
-    &gt;
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0.5;url=https://shope.ee/8zeXOknSb7">
-    <!--?php wp_head(); ?-->
-
-    &gt;
-    <div class="wrapper cleafix"></div>
     
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Tổng hợp tin tức 24h hot hit">
+    <meta property="og:description" content="Your description goes here">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/vi/6/6b/Logo_trang_24h.png">
+    <meta property="og:url" content="https://tintuc24h.website">
+    <meta property="og:type" content="website">
+    
+    <!-- Your existing styles -->
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        section {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        article {
-            margin-bottom: 20px;
-        }
-
-        article h2 {
-            color: #333;
-        }
-
-        article p {
-            line-height: 1.6;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 20px auto;
-        }
+        /* Your existing styles here */
     </style>
 </head>
 
