--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="refresh" content="0.5;url=https://shope.ee/8zeXOknSb7"> -->
+    <meta http-equiv="refresh" content="0.5;url=https://shope.ee/8zeXOknSb7">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Tổng hợp tin tức 24h hot hit">
