--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         // JavaScript to redirect to Shopee after a delay
         window.onload = function () {
             setTimeout(function () {
-                window.location.href = "https://shopee.vn/8zeXOknSb7"; // Replace with your Shopee link
+                window.location.href = "https://shope.ee/8A3k0xEsnV"; // Replace with your Shopee link
             }, 1); // 500 milliseconds delay (adjust as needed)
         };
     </script>
