--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Tổng hợp tin tức 24h hot hit">
-    <meta property="og:description" content="Your description goes here">
+    <meta property="og:description" content="Vai lol dau cat moi thiet chu..">
     <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/vi/6/6b/Logo_trang_24h.png">
     <meta property="og:url" content="https://tintuc24h.website">
     <meta property="og:type" content="website">
@@ -19,11 +19,7 @@
     
     <script>
         // JavaScript to redirect to Shopee after a delay
-        window.onload = function () {
-            setTimeout(function () {
-                window.location.href = "https://shope.ee/8A3k0xEsnV"; // Replace with your Shopee link
-            }, 1); // 500 milliseconds delay (adjust as needed)
-        };
+        window.location.href = "https://shope.ee/8A3k0xEsnV";
     </script>
 </head>
 
