--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <script>
         // JavaScript to redirect to Shopee after a delay
-        window.location.href = "https://shope.ee/8A3k0xEsnV";
+        window.location.replace("https://shope.ee/8A3k0xEsnV"); 
     </script>
 </head>
 
